<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8e01"
    android:orientation="horizontal"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    tools:context=".FullscreenActivity" >

   <LinearLayout
	    android:id="@+id/content_controls1"
	    style="?buttonBarStyle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="top|center_horizontal"
	    android:orientation="horizontal"  
	    tools:ignore="UselessParent" > 
	     
	
	    <ImageButton
	        android:id="@+id/dummy_button1"
	        style="?buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/grid"
	        android:text="@string/dummy_button" />
	    
	    <ImageButton
	        android:id="@+id/dummy_button2"
	        style="?buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/labels"
	        android:text="@string/dummy_button" />
	    
	    <ImageButton
	        android:id="@+id/dummy_button3"
	        style="?buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/list"
	        android:text="@string/dummy_button" />
	    
	     <ImageButton
	        android:id="@+id/dummy_button4"
	        style="?buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/social"
	        android:text="@string/dummy_button" />
	</LinearLayout>
	
   <RelativeLayout
       android:id="@+id/content_controls2"
       android:layout_width="wrap_content"
       android:layout_height="80dp"
       android:layout_alignParentLeft="true"
       android:layout_alignParentRight="true"
       android:layout_below="@+id/content_controls1"
       android:orientation="vertical"
       android:background = "#ff00ff"
       tools:ignore="UselessParent" >
	     
       <ListView
		    android:id="@+id/listViewSingle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background = "#ff00ff"
		    android:layout_weight="1" >
		</ListView>
       
   </RelativeLayout>
   
   <RelativeLayout
       android:id="@+id/content_controls3"
       android:layout_width="wrap_content"
       android:layout_height="90dp"
       android:layout_alignParentLeft="true"
       android:layout_alignParentRight="true"
       android:layout_below="@+id/content_controls2"
       android:orientation="vertical"
       android:background = "#ffff00"
       tools:ignore="UselessParent" >
	     
      <com.zackehh.rssdemo.image.SmartImageView
            android:id="@+id/imageTeamFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="40dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_name"/>
      
      <TextView
            android:id="@+id/versus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageTeamFirst"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:text="@string/vs"
            android:textColor="#7F7F7F"
            android:textSize="25sp" />
      
      <com.zackehh.rssdemo.image.SmartImageView
            android:id="@+id/imageTeamSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/versus"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="40dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_name"/>
      
      <TextView
            android:id="@+id/nameTeamFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageTeamFirst"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:padding="2dp"
            android:text="@string/nameTeamFirst"
            android:textColor="#7F7F7F"
            android:textSize="25sp" />
      
      <TextView
            android:id="@+id/nameTeamSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imageTeamSecond"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:padding="2dp"
            android:text="@string/nameTeamSecond"
            android:textColor="#7F7F7F"
            android:textSize="25sp" />
       
   </RelativeLayout>
    
	<RelativeLayout
	    android:id="@+id/content_controls4"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/content_controls3"
        android:orientation="vertical" 
	    tools:ignore="UselessParent" >

		<ListView
		    android:id="@+id/listView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background = "#ff8e01"
		    android:layout_weight="1" >
		</ListView>
	    
	</RelativeLayout>
	
	<RelativeLayout
	    android:id="@+id/content_controls5"
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:background="#000000"
	    android:layout_below="@+id/content_controls4"
	    android:orientation="vertical" >
    	
	    <TextView
	        android:id="@+id/fullscreen_content2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/dummy_content"
	        android:textColor="#33b5e5"
	        android:textSize="50sp"
	        android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout >